--- a/Sydney Coding/Day-6/style.css
+++ b/Sydney Coding/Day-6/style.css
@@ -17,6 +17,7 @@ div {
 .box-content {
     width: 200px;
     height: 200px;
+    padding: 20px;
     border: 2px solid black;
     background-color: cadetblue;
     box-sizing: content-box;
@@ -25,6 +26,7 @@ div {
 .box-border-box {
     width: 200px;
     height: 200px;
+    padding: 20px;
     border: 2px solid black;
     background-color: cyan;
     box-sizing: border-box;
